Set minimum and target to java 21. Adjust minimal dependencies for that change.